--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,11 +1,12 @@
 .sidebar{
-    max-width: 30vh;
-    padding: 80px 0 0 80px;
-
+    max-width: 260px;
+    flex: 0.3;
+    margin: 80px 0 0 80px;
+    box-shadow: 0px 5px 7px -7px rgba(0,0,0,0.75);
 }
 
 .sidebar__profile{
-    border: 3px solid black;
+    border: 2px solid whitesmoke;
     text-align: center;
 }
 .profile__background{
