--- a/src/Feed.css
+++ b/src/Feed.css
@@ -1,8 +1,8 @@
 .feed{
-    flex: 0.6;
+    flex: 0.5;
     padding: 30px 15px ;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
 }
