--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,13 +1,14 @@
 .sidebar{
     max-width: 260px;
     flex: 0.3;
-    margin: 60px 0 0 60px;
-    box-shadow: 0px 5px 7px -7px rgba(0,0,0,0.75);
-    border: 2px solid whitesmoke;
 }
 
 .sidebar__profile{
-    
+    min-width: 200px;
+    padding-top: 20px;
+    padding-left: 20px;
+    box-shadow: 0px 5px 7px -7px rgba(0,0,0,0.75);
+    border: 2px solid whitesmoke;
     text-align: center;
 }
 .profile__background{
