--- a/src/Post.css
+++ b/src/Post.css
@@ -25,6 +25,7 @@
 .post__image > img {
     width: 100%;
     border-radius: 15px;
+    object-fit: cover;
 }
 .post__bottom {
     margin-top: 10px;
@@ -48,6 +49,11 @@
     padding: 5px;
     flex: 1;
 }
+.post__option > .MuiSvgIcon-root {
+    margin-right: 4px;
+}
+
+
 .post__option:hover {
     background-color: #eff2f5;
     border-radius: 10px;
