--- a/src/Events.css
+++ b/src/Events.css
@@ -2,5 +2,8 @@
     flex: 0.4;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    align-items: center;
+    border:2px solid  black;
+    border-radius: 10px;
+    background-color: floralwhite;
 }
