--- a/src/SocietyMessageSender.css
+++ b/src/SocietyMessageSender.css
@@ -13,22 +13,24 @@
     border-bottom: 1px solid #eff2f4;
     padding: 15px;
 }
-.messageSender__top > form {
-    flex: 1;
-    display: flex;
-}
 
-.messageSender__top > form > input {
+
+.messageSender__top  > button {
     outline-width: 0;
     border: none;
-    padding: 5px 20px;
     margin: 0 10px;
+    display: flex;
+    align-items:center;
+    flex:1;
     border-radius: 999px;
     background-color: #eff2f5;
 }
-.messageSender__top > form  > button {
-    display: none;
+
+.messageSender__top > button:hover {
+    background-color: #dfe0df;
+    cursor: pointer;
 }
+
 .messageSender__input {
     flex: 1;
 }
