--- a/src/SocietyMessageSender.css
+++ b/src/SocietyMessageSender.css
@@ -54,3 +54,32 @@
     background-color: #eff2f5;
     border-radius: 20px;
 }
+.modal__input{
+    border:none;
+}
+.modal__profile{
+    display: flex;
+    align-items: center;
+    padding-top: 10px;
+    margin-bottom: 10px;
+}
+.modal__title{
+    margin-left: 5px;
+}
+.modal__top{
+display: flex;
+justify-content: space-between;
+
+}
+.modal__top > h2{
+    font-weight: 500;
+}
+
+.post__button{
+    width: 100%;
+    background-color: #16a596;
+    color: whitesmoke;
+}
+
+
+
