--- a/src/SocietyMessageSender.css
+++ b/src/SocietyMessageSender.css
@@ -82,7 +82,7 @@ justify-content: space-between;
     background-color: #16a596;
     color: whitesmoke;
 }
-.video__input{
+.video__input, .photo__input{
     /* display: inline-block; */
   width: 63%;
   padding: 50px 0 0 0;
@@ -94,10 +94,19 @@ justify-content: space-between;
   background-repeat: no-repeat;
   outline: 0px;
   /* background-color: cadetblue; */
-  background: url('./video__input.png') ;
+  
   /* border-radius: 20px; */
   /* background-size: 60px 60px; */
 }
+.video__input{
+    background: url('./video__input.png') ;
+}
+.photo__input{
+    background:url('./photo.png');
+}
+
+
+
 .modal__input__photo{
     width: 80%;
     margin: auto;
@@ -111,5 +120,6 @@ justify-content: space-between;
     position: absolute;
     right: 72px;
 }
+
 
 
