--- a/src/SocietyMessageSender.css
+++ b/src/SocietyMessageSender.css
@@ -1,102 +1,82 @@
-.message{
-    flex: 1;
-    display: flex;
-    margin-top: 30px;
-    flex-direction: column;
-    background-color: floralwhite;
-    border-radius: 15px;
-    box-shadow: 0px 5px 7px -7px rgba(0,0,0,0.75);
-    
+.message {
+  flex: 1;
+  display: flex;
+  margin-top: 30px;
+  flex-direction: column;
+  background-color: floralwhite;
+  border-radius: 15px;
+  box-shadow: 0px 5px 7px -7px rgba(0, 0, 0, 0.75);
 }
-.messageSender__top{
-    display: flex;
-    border-bottom: 1px solid #eff2f4;
-    padding: 15px;
+.messageSender__top {
+  display: flex;
+  border-bottom: 1px solid #eff2f4;
+  padding: 15px;
 }
 
-
-.messageSender__top  > button {
-    outline-width: 0;
-    border: none;
-    margin: 0 10px;
-    display: flex;
-    align-items:center;
-    flex:1;
-    border-radius: 999px;
-    background-color: #eff2f5;
+.messageSender__top > button {
+  outline-width: 0;
+  border: none;
+  margin: 0 10px;
+  display: flex;
+  align-items: center;
+  flex: 1;
+  border-radius: 999px;
+  background-color: #eff2f5;
 }
 
 .messageSender__top > button:hover {
-    background-color: #dfe0df;
-    cursor: pointer;
+  background-color: #dfe0df;
+  cursor: pointer;
 }
 
 .messageSender__input {
-    flex: 1;
+  flex: 1;
 }
 .messageSender__bottom {
-    display: flex;
-    justify-content: space-evenly;
+  display: flex;
+  justify-content: space-evenly;
 }
 .messageSender__option {
-    /* padding: 20px; */
-    display: flex;
-    align-items: center;
-    color: gray;
-    margin: 5px;
+  /* padding: 20px; */
+  display: flex;
+  align-items: center;
+  color: gray;
+  margin: 5px;
 }
-.messageSender__option >h3 {
-    font-size: medium;
-    margin-left: 10px;
-    cursor: pointer;
+.messageSender__option > h3 {
+  font-size: medium;
+  margin-left: 10px;
+  cursor: pointer;
 }
 .messageSender__option:hover {
-    /* background-color: #eff2f5; */
-    border-radius: 20px;
-    cursor: pointer;
+  /* background-color: #eff2f5; */
+  border-radius: 20px;
+  opacity: 0.8;
+  cursor: pointer;
 }
-.modal__input{
-    border:none;
-    outline: 0;
+.modal__input {
+  border: none;
+  outline: 0;
 }
-.modal__profile{
-    display: flex;
-    align-items: center;
-    padding-top: 10px;
-    margin-bottom: 10px;
+.modal__profile {
+  display: flex;
+  align-items: center;
+  padding-top: 10px;
+  margin-bottom: 10px;
 }
-.modal__title{
-    margin-left: 5px;
+.modal__title {
+  margin-left: 5px;
 }
-.modal__top{
-display: flex;
-justify-content: space-between;
-
+.modal__top {
+  display: flex;
+  justify-content: space-between;
 }
-.modal__top > h2{
-    font-weight: 500;
-}
-
-.post__button{
-    width: 100%;
-    background-color: #16a596;
-    color: whitesmoke;
-}
-.video__input{
-    /* display: inline-block; */
-  width: 63%;
-  padding: 50px 0 0 0;
-  height: 10px;
-  /* overflow: hidden; */
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  background-repeat: no-repeat;
-  outline: 0px;
-  /* background-color: cadetblue; */
-  background: url('./video__input.png') ;
-  /* border-radius: 20px; */
-  /* background-size: 60px 60px; */
+.modal__top > h2 {
+  font-weight: 500;
 }
 
-
+.post__button {
+  width: 100%;
+  background-color: #16a596;
+  color: whitesmoke;
+}
