--- a/src/Post.css
+++ b/src/Post.css
@@ -10,6 +10,7 @@
     position: relative;
     align-items: center;
     padding: 15px;
+    padding-bottom: 0 !important;
 }
 .post__avatar{
     margin-right: 10px;
@@ -28,9 +29,9 @@
     object-fit: cover;
 }
 .post__bottom {
-    margin-top: 10px;
-    margin-bottom: 10px;
     padding: 15px 25px;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
 }
 .post__options {
     padding-top: 10px;
