--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,10 +1,14 @@
 .sidebar{
     padding: 0;
+    box-shadow: 0px 5px 7px -7px rgba(0,0,0,0.75);
+}
+.sidebar__card{
+    box-shadow: 0px 5px 7px -7px rgba(0,0,0,0.75);
 }
 
 .sidebar__profile{
-    padding-top: 20px;
-    
+    padding: 10px;
+    background-color: white;
     box-shadow: 0px 5px 7px -7px rgba(0,0,0,0.75);
     border: 2px solid whitesmoke;
     text-align: center;
