--- a/src/MessageSender.css
+++ b/src/MessageSender.css
@@ -2,6 +2,7 @@
     flex: 1;
     display: flex;
     margin-top: 15px;
+    padding-top: 10px;
     flex-direction: column;
     background-color: floralwhite;
     border-radius: 15px;
