--- a/src/Header.css
+++ b/src/Header.css
@@ -10,7 +10,7 @@
 }
 .header__left{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
 
 }
