--- a/src/Post.css
+++ b/src/Post.css
@@ -36,7 +36,7 @@
 .post__options {
     padding-bottom: 5px;
     border-top: 1px solid lightgray;
-    display: flex;
+    /* display: flex; */
     /* justify-content: space-evenly; */
     font-size: medium;
     color: gray;
@@ -61,4 +61,10 @@
 }
 .post__comments{
     padding: 20px;
+}
+.post__commentBox{
+    display: flex;
+}
+.post__button{
+    justify-content: end;
 }
