--- a/src/MessageSender.css
+++ b/src/MessageSender.css
@@ -3,6 +3,7 @@
     display: flex;
     margin-top: 15px;
     padding-top: 10px;
+    margin-left: 5px;
     flex-direction: column;
     background-color: floralwhite;
     border-radius: 15px;
