--- a/src/Post.css
+++ b/src/Post.css
@@ -1,6 +1,7 @@
 .post{
     width: 100%;
     margin-top: 15px;
+    margin-left: 5px;
     border-radius: 15px;
     background-color: floralwhite;
     box-shadow: 0px 5px 7px -7px rgba(0,0,0,0.75);
