--- a/src/Login.css
+++ b/src/Login.css
@@ -1,12 +1,20 @@
 .login{
     height: 100vh;
     background-color: #f8f8f8;
-    display: grid;
-    place-items: center;
+    align-items: center;
+    background-image :url(https://mapio.net/images-p/55335209.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    /* display: grid; */
+    /* place-items: center; */
 }
 
 .login__container {
-    padding: 100px;
+    padding: 20px;
     text-align: center;
     background-color: white;
     border-radius: 10px;
