--- a/src/Event.css
+++ b/src/Event.css
@@ -1,7 +1,6 @@
-.event{
+/* .event{
     display: flex;
     margin: 10px 5px;
-    /* box-shadow:11px 5px 25px 12px #888888; */
     border-radius: 10px;
     padding: 5px 10px;
     padding-left: 0px;
@@ -17,4 +16,4 @@
 }
 .event__right > time {
     color: red;
-}
+} */
