--- a/src/Events.css
+++ b/src/Events.css
@@ -1,4 +1,4 @@
-.events{
+/* .events{
     flex: 0.4;
     display: flex;
     flex-direction: column;
@@ -6,4 +6,4 @@
     border:2px solid  black;
     border-radius: 10px;
     background-color: floralwhite;
-}
+} */
