--- a/src/Post.css
+++ b/src/Post.css
@@ -62,6 +62,7 @@
 }
 .post__comments{
     padding: 20px;
+    padding-left: 0px;
 }
 .post__commentBox{
     display: flex;
@@ -76,4 +77,14 @@
     background: lightgray;
     outline-width: 0;
     padding-left: 10px;
+}
+.comment__div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 2px;
+}
+.comment__div > p{
+    overflow-wrap:anywhere;
+    margin:0;
+    margin-left: 5px;
 }
