Post carousel added but issue in zoom feature

--- a/src/Post.css
+++ b/src/Post.css
@@ -13,6 +13,9 @@
     padding: 15px;
     padding-bottom: 0 !important;
 }
+video{
+    object-fit: cover !important;
+}
 .post__avatar{
     margin-right: 10px;
 }
