--- a/src/MessageSender.css
+++ b/src/MessageSender.css
@@ -1,63 +1,60 @@
-.message{
-    flex: 1;
-    display: flex;
-    margin-top: 15px;
-    padding-top: 10px;
-    margin-left: 5px;
-    flex-direction: column;
-    background-color: floralwhite;
-    border-radius: 15px;
-    box-shadow: 0px 5px 7px -7px rgba(0,0,0,0.75);
-    
+.message {
+  flex: 1;
+  display: flex;
+  margin-top: 15px;
+  padding-top: 10px;
+  margin-left: 5px;
+  flex-direction: column;
+  background-color: floralwhite;
+  border-radius: 15px;
+  box-shadow: 0px 5px 7px -7px rgba(0, 0, 0, 0.75);
 }
-.messageSender__top{
-    display: flex;
-    border-bottom: 1px solid #eff2f4;
-    padding: 15px;
+.messageSender__top {
+  display: flex;
+  border-bottom: 1px solid #eff2f4;
+  padding: 15px;
 }
 .messageSender__top > form {
-    flex: 1;
-    display: flex;
+  flex: 1;
+  display: flex;
 }
 
 .messageSender__top > form > input {
-    outline-width: 0;
-    border: none;
-    padding: 5px 20px;
-    margin: 0 10px;
-    border-radius: 999px;
-    background-color: #eff2f5;
+  outline-width: 0;
+  border: none;
+  padding: 5px 20px;
+  margin: 0 10px;
+  border-radius: 999px;
+  background-color: #eff2f5;
 }
-.messageSender__top > form  > button {
-    display: none;
+.messageSender__top > form > button {
+  display: none;
 }
 /* .messageSender__input {
     flex: 1;
 } */
 .messageSender__bottom {
-    margin: 0;
+  margin: 0;
 }
- .messageSender__option {
-    color: gray;
-    padding: 0;
+.messageSender__option {
+  color: gray;
+  padding: 0;
 }
-.messageSender__option__label{
-    display: flex;
-    margin: 0;
-    justify-content: center;
-    align-items: center;
+.messageSender__option__label {
+  display: flex;
+  margin: 0;
+  justify-content: center;
+  align-items: center;
 }
-.messageSender__option__label > div > h4{
-    font-size: 1rem;
-    margin-top:8px;
-
+.messageSender__option__label > div > h4 {
+  font-size: 1rem;
+  margin-top: 8px;
 }
-@media (min-width: 1000px){ 
-    .messageSender__option__label > div > h4{
-        font-size: 1.4rem;
-        margin-top:8px;
-    }
-    
+@media (min-width: 1000px) {
+  .messageSender__option__label > div > h4 {
+    font-size: 1.4rem;
+    margin-top: 8px;
+  }
 }
 /*
 .messageSender__option >h3 {
