--- a/src/Post.css
+++ b/src/Post.css
@@ -11,6 +11,7 @@
     position: relative;
     align-items: end;
     padding: 15px;
+    justify-content: space-between;
     padding-bottom: 0 !important;
 }
 video{
@@ -18,6 +19,9 @@ video{
 }
 .post__avatar{
     margin-right: 10px;
+}
+.post__info__container{
+    display: flex;
 }
 .post__topInfo > h3 {
     font-size: medium;
