--- a/src/MessageSender.css
+++ b/src/MessageSender.css
@@ -5,7 +5,7 @@
   padding-top: 10px;
   margin-left: 5px;
   flex-direction: column;
-  background-color: floralwhite;
+  background-color: rgb(138, 135, 129);
   border-radius: 15px;
   box-shadow: 0px 5px 7px -7px rgba(0, 0, 0, 0.75);
 }
@@ -25,7 +25,7 @@
   padding: 5px 20px;
   margin: 0 10px;
   border-radius: 999px;
-  background-color: #eff2f5;
+  background-color: rgb(138, 135, 129);
 }
 .messageSender__top > form > button {
   display: none;
